--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Gut Deutsch online
 description: Daniel Jach
 theme: jekyll-theme-slate
+staticmanUrl: https://api.staticman.net/v3/entry/github/daniel-jach/gutDeutsch-online/_comments
