--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 !sprachspielereien/einheiten/
 !sprachspielereien/einheiten/*
 !sprachspielereien/einheiten/**
-sprachspielereien/einheiten/external_videos/video_schoen.mp4
+sprachspielereien/einheiten/external_videos/*
 !maerchen/docs/
 !marchen/docs/*
 
